1. fixed unwanted behaviour with new page creation 2, fixed unwanted navigation to top page 3. fixed disabled navigation to home page after page creation 4. separated logic for recent visited page array and pages array 5. Added and implemented basic functionality for fuzzy search (cltr + k) 6. Working on mobile UI and other mvp features now

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,7 +57,9 @@ body[data-theme='glass'] {
   --button-hover-bg: #6a4ee6;
   --input-bg: rgba(255,255,255,0.08);
   --input-fg: var(--foreground);
-  --glass-blur: blur(16px);
+  --dropdown-bg: rgba(28, 28, 30, 0.8);
+  --glass-blur: blur(12px);
+  --menu-bg: rgba(28,28,30,0.95);
 }
 
 @theme inline {
